--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,26 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /home/ubuntu/app
+  - source: Zfolder/
+    destination: /home/ubuntu/app/Zfolder
+  - source: css/
+    destination: /home/ubuntu/app/css
+  - source: js/
+    destination: /home/ubuntu/app/js
+  - source: user/
+    destination: /home/ubuntu/app/user
+  - source: README.md
+    destination: /home/ubuntu/app/README.md
+  - source: events.html
+    destination: /home/ubuntu/app/events.html
+  - source: index.html
+    destination: /home/ubuntu/app/index.html
+  - source: items.html
+    destination: /home/ubuntu/app/items.html
+  - source: pins.html
+    destination: /home/ubuntu/app/pins.html
+  - source: songs.html
+    destination: /home/ubuntu/app/songs.html
 hooks:
   ApplicationStart:
     - location: scripts/start.sh
